# video-amixcontrol

./: .gitignore
.circleci/: config.yml
api/: mixerapi.conf  pyproject.toml
api/debian/: changelog.template  control  copyright  fosdem-mixer-api.service  install  lintian-overrides
api/mixerapi/: .gitignore  __main__.py  config.py  entrypoint.py  fosdemapi.py  helpers.py  levels.py  mixerapi.conf.example  state.py
cli/: pyproject.toml  setup.py
cli/debian/: changelog.template  control  copyright  lintian-overrides
cli/mixercli/: __main__.py  osc_cli.py
osc-lib/: pyproject.toml
osc-lib/debian/: changelog.template  control  copyright  lintian-overrides  python3-fosdemosc.oscproxy.service  rules
osc-lib/fosdemosc/: __init__.py  helpers.py  osc_controller.py  proxy.py  slip_client.py  udp_client.py
osc-proxy/: setup.py
osc-proxy/osc_proxy/: __main__.py  slip.py
