[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mixerapi"
description = "FOSDEM Mixer API"
dynamic = ["version"]
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "fosdemosc",
    "websockets",
    "aiohttp",
]

[project.scripts]
mixerapi = "mixerapi.entrypoint:main"


[tool.setuptools.packages.find]
include = ["mixerapi", "mixerapi.*"]
