[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mixercli"
description = "FOSDEM Mixer CLI"
dynamic = ["version"]
requires-python = ">=3.10"

dependencies = [
    "click",
    "click-repl",
    "tabulate",
    "pyserial",
    "fosdemosc",
]

[project.scripts]
mixercli = "mixercli.osc_cli:cli"


[tool.setuptools.packages.find]
include = ["mixercli", "mixercli.*"]
