[project]
name = "fosdemosc"
description = "FOSDEM Mixer - OSC bridge"
requires-python = ">=3.10"

dynamic = ["version"]

dependencies = [
    "pyserial",
    "python-osc",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
oscproxy = "fosdemosc.proxy:main"

[tool.setuptools.packages.find]
include = ["fosdemosc", "fosdemosc.*"]
